--- a/index.html
+++ b/index.html
@@ -3,28 +3,12 @@
 <title>THOTKNOX</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-
-<body>
-
-<div class="bgimg">
-
-  <div class="w3-display-container w3-animate-opacity w3-text-white">
- 
-    <div class="text-middle">
-      <h1 class=>COMING SOON</h1>
-      <hr class="w3-border-grey" style="margin:auto;width:40%">
-      <p class="w3-large w3-center" id="result"></p>
-    </div>
-
-  </div>
-
-</div>
-
-<script type="text/javascript" src="script.js">
-</script>
-
+<style>
+</style>
+<body class=bg-image>
+ <div class=text-middle>
+  <div class="text-border" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">THOTKNOX</div>
+ </div>
 </body>
 </html>
